--- a/tutorials/cellanova_integration.html
+++ b/tutorials/cellanova_integration.html
@@ -15710,7 +15710,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <li><code>adata</code> : Preprocessed anndata object. This object should be the output of the function <code>cnova.model.preprocess_data</code>.</li>
 <li><code>integrate_key</code> : str. Variable name indicating the smallest batch unit/sample, which will be used for integration. Should be a column name of adata.obs.</li>
 <li><code>dim_ME</code> (optional) : int, dimension of main effects. Defualt is 70.</li>
-<li><code>n_pcs</code> (optional) : int, number of principle components used in harmony integration. Defualt is 70.</li>
+<li><code>k_harmony</code> (optional) : int, number of principle components used in harmony integration. Defualt is 70.</li>
 </ul>
 <p>The output is anndata object, in which we stored the following main information:</p>
 <ul>
